# py-voice-clone

./: .gitignore  README.md  apt.pkglist  main.py  pyproject.toml  requirements.txt
lib/assets/training_data/example/: metadata.txt
src/: custom_tts.py  diff_ljspeech_metadata_csv.py
util/pipelines/: create-ljspeech-dataset-with-whisper.sh
util/scripts/: create-combined-audio-file.sh  create-single-channel-wavs.sh  delete-long-audio-files.sh  get-training-data.sh  get-xtts-model.sh  install-apt-deps.sh  install-cuda.deb.sh  start-tensorboard.sh  tts.sh
